dnl
dnl "$Id: configure.in,v 1.1 1999/11/07 13:33:17 mike Exp $"
dnl
dnl   Configuration script for HTMLDOC, an HTML document processing program.
dnl
dnl   Copyright 1997-1998 by Michael Sweet, all rights reserved.
dnl
dnl   HTMLDOC is distributed under the terms of the GNU General Public License
dnl   which is described in the file "COPYING-2.0".
dnl

AC_INIT(htmldoc.cpp)
AC_CONFIG_HEADER(config.h)

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
	DEBUGFLAG="-g"
fi)

if test -n "$DEBUGFLAG"; then
	CFLAGS="$DEBUGFLAG $CFLAGS"
fi

dnl Checks for programs...
AC_PROG_CXX
AC_PROG_CPP

dnl All tests done with the C++ compiler...
AC_LANG_CPLUSPLUS

dnl Check for libraries...

AC_PATH_XTRA
if test "$X_PRE_LIBS" != ""; then
	echo "Ignoring libraries \"$X_PRE_LIBS\" requested by configure."
fi
if test "$X_LIBS" = " -L/usr/lib"; then
	echo "Ignoring X library directory \"$X_LIBS\" requested by configure."
	X_LIBS=""
fi

AC_CHECK_LIB(fltk,numericsort,X_LIBS="$X_LIBS -lfltk -lX11 -lXext"
AC_DEFINE(HAVE_LIBFLTK))
AC_CHECK_LIB(jpeg,jpeg_destroy_decompress)
AC_CHECK_LIB(z,deflate)
AC_CHECK_LIB(png,png_init_io)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for string functions.
AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(strcasecmp)
AC_CHECK_FUNCS(strncasecmp)

AC_OUTPUT(Makefile)

dnl
dnl End of "$Id: configure.in,v 1.1 1999/11/07 13:33:17 mike Exp $".
dnl
